--- a/contact.html
+++ b/contact.html
@@ -10,11 +10,11 @@
 <body>
 <nav>
 <ul>
-<li><a href="Index.html">Home</li></a>
+<li><a href="index.html">Home</li></a>
 <li><a href="geschiedenis.html">Geschiedenis</li></a>
-<li><a href="Tips.html">Tips</li></a>
-<li><a href="Bezienswaardigheden.html">Bezienswaardigheden</li></a>
-<li><a href="Contact.html">Contact</li></a>
+<li><a href="tips.html">Tips</li></a>
+<li><a href="bezienswaardigheden.html">Bezienswaardigheden</li></a>
+<li><a href="contact.html">Contact</li></a>
 </ul>
 </nav>
 <h2> Contact</h2>
